# notifications

./: .env-dist  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yml
.github/: issue-branch.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/workflows/: ci.yml  cicd.yml  create-branch.yml
docker/: .bashrc  Dockerfile  ipython_config.py
src/: main.py  pyproject.toml
src/app/core/: config.py  logging_config.py  security.py  theme.py
src/app/locales/: en.json  es.json
src/app/routers/: notifications.py
src/app/schemas/: email.py
src/app/services/: email_engine.py
src/templates/: base.html  styles.css
src/templates/register/: content.html
src/templates/register_google/: content.html
src/templates/registration_reminder_30_days/: content.html
src/templates/registration_reminder_3_days/: content.html
src/templates/registration_reminder_7_days/: content.html
src/templates/reset_password/: content.html
src/templates/user_deleted_due_no_verification/: content.html
src/tests/app/core/: test_config.py  test_security.py
src/tests/app/routers/: test_notifications.py
src/tests/app/services/: test_email_engine.py
src/tests/templates/test_template/: content.html
