[project]
name = "Notifications"
version = "1.0.0"
description = "Notifications service for the project. It is connected with resend to manage the emails."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.128.0",
    "jinja2==3.1.6",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.12.0",
    "resend==2.19.0",
    "uvicorn==0.40.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pre-commit==4.5.1",
    "coverage==7.13.1",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
